# Magic-Mouse

./: .gitignore  README.md
.github/workflows/: release.yml
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/magicmouse/: BluetoothClient.kt  MouseActivity.kt  SensorHub.kt  UdpClient.kt  WelcomeActivity.kt
android_app/app/src/main/res/drawable/: circle_button_bg.xml  cyan_glow_shape.xml  ic_connected_dot.xml  ic_gyroscope.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_microphone.xml  ic_mouse.xml  ic_settings.xml  rounded_card_bg.xml  rounded_pill_bg.xml
android_app/app/src/main/res/layout/: activity_mouse.xml  activity_welcome.xml  dialog_settings.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
server/: CMakeLists.txt  test_hz.cpp  test_motion.cpp
server/src/: InputController.cpp  InputController.h  OneEuroFilter.h  main.cpp
